@@ -16,6 +16,25 @@
 <link tal:condition="not:forced_css" rel="stylesheet" type="text/css" tal:attributes="href string:${root_relative_url}/print.css" media="print" />
 <link tal:condition="forced_css" rel="stylesheet" type="text/css" tal:attributes="href forced_css" />
 </tal:block>
+<style type="text/css">
+ul#tabnav li {
+  padding:2px 3px 0 3px;
+}
+ul#tabnav a { 
+   background-image: url(/misc_/IssueTrackerProduct/csg-4a8135ab36765.gif);
+   background-repeat:no-repeat;
+   padding-left:20px;
+   padding-top:0;
+   padding-bottom:0;
+}
+#menuitem-AddIssue { background-position: 0 0; } 
+#menuitem-CompleteList { background-position: 0 -66px; } 
+#menuitem-Home { background-position: 0 -132px; } 
+#menuitem-ListIssues { background-position: 0 -198px; } 
+#menuitem-Login { background-position: 0 -264px; } 
+#menuitem-Logout { background-position: 0 -330px; } 
+#menuitem-User { background-position: 0 -396px; } 
+</style>
 <style metal:define-slot="extracss" tal:omit-tag=""></style>
 <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" tal:attributes="href string:${root_relative_url}/favicon.ico" />
 <script type="text/javascript" src="/misc_/IssueTrackerProduct/jquery-1.3.2.min.js"></script>
@@ -40,8 +59,9 @@
 <ul id="tabnav" tal:define="use_accesskeys here/useAccessKeys">
 	<li tal:repeat="menu here/getMenuItems"
         tal:attributes="class python:test(menu[2],'tab1','tab0')"
-        ><a tal:attributes="href python:menu[1]"
-	    tal:content="structure python:here.displayMenuItem(menu)"></a></li>
+        ><a tal:attributes="href python:menu[1]; 
+                            id python:'menuitem-%s' % menu[3]"
+	    tal:content="structure python:here.displayMenuItem(menu, no_images_in_menu=True)"></a></li>
 </ul>
 </div>
 </div>
